WIP: unstable code committed and pushed by shortcut script

--- a/environment_cross_platform.yml
+++ b/environment_cross_platform.yml
@@ -1,4 +1,4 @@
-name: replace_with_env_name
+name: gregg-circ-homer-models
 channels:
   - defaults
 dependencies:
@@ -7,4 +7,4 @@ dependencies:
   - jupytext
   - pip
   - python=3.8
-prefix: C:\Users\Gregg\anaconda3\envs\replace_with_env_name
+prefix: C:\Users\Gregg\anaconda3\envs\gregg-circ-homer-models
