--- a/environment_explicit.yml
+++ b/environment_explicit.yml
@@ -11,24 +11,33 @@ dependencies:
   - babel=2.11.0=py38haa95532_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - beautifulsoup4=4.12.2=py38haa95532_0
+  - blas=1.0=mkl
   - bleach=4.1.0=pyhd3eb1b0_0
+  - brotli=1.0.9=h2bbff1b_7
+  - brotli-bin=1.0.9=h2bbff1b_7
   - brotli-python=1.0.9=py38hd77b12b_7
-  - ca-certificates=2023.12.12=haa95532_0
+  - ca-certificates=2024.3.11=haa95532_0
   - certifi=2024.2.2=py38haa95532_0
   - cffi=1.16.0=py38h2bbff1b_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - colorama=0.4.6=py38haa95532_0
   - comm=0.2.1=py38haa95532_0
+  - contourpy=1.0.5=py38h59b6b97_0
+  - cycler=0.11.0=pyhd3eb1b0_0
   - debugpy=1.6.7=py38hd77b12b_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
   - exceptiongroup=1.2.0=py38haa95532_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.12.1=ha860e81_0
+  - icc_rt=2022.1.0=h6049295_2
   - icu=73.1=h6c2663c_0
   - idna=3.4=py38haa95532_0
   - importlib-metadata=7.0.1=py38haa95532_0
   - importlib_metadata=7.0.1=hd3eb1b0_0
   - importlib_resources=6.1.1=py38haa95532_1
+  - intel-openmp=2023.1.0=h59b6b97_46320
   - ipykernel=6.28.0=py38haa95532_0
   - ipython=8.12.2=py38haa95532_0
   - ipywidgets=8.1.2=py38haa95532_0
@@ -50,37 +59,57 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.25.1=py38haa95532_0
   - jupyterlab_widgets=3.0.10=py38haa95532_0
-  - jupytext=1.15.2=py38haa95532_0
+  - jupytext=1.16.1=py38haa95532_1
+  - kiwisolver=1.4.4=py38hd77b12b_0
   - krb5=1.20.1=h5b6d351_0
+  - lerc=3.0=hd77b12b_0
+  - libbrotlicommon=1.0.9=h2bbff1b_7
+  - libbrotlidec=1.0.9=h2bbff1b_7
+  - libbrotlienc=1.0.9=h2bbff1b_7
   - libclang=14.0.6=default_hb5a9fac_1
   - libclang13=14.0.6=default_h8e68704_1
+  - libdeflate=1.17=h2bbff1b_1
   - libffi=3.4.4=hd77b12b_0
   - libpng=1.6.39=h8cc25b3_0
   - libpq=12.17=h906ac69_0
   - libsodium=1.0.18=h62dcd97_0
+  - libtiff=4.5.1=hd77b12b_0
+  - libwebp-base=1.3.2=h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
   - markdown-it-py=2.2.0=py38haa95532_1
   - markupsafe=2.1.3=py38h2bbff1b_0
+  - matplotlib=3.7.2=py38haa95532_0
+  - matplotlib-base=3.7.2=py38h4ed8f06_0
   - matplotlib-inline=0.1.6=py38haa95532_0
   - mdit-py-plugins=0.3.0=py38haa95532_0
   - mdurl=0.1.0=py38haa95532_0
   - mistune=2.0.4=py38haa95532_0
+  - mkl=2023.1.0=h6b88ed4_46358
+  - mkl-service=2.4.0=py38h2bbff1b_1
+  - mkl_fft=1.3.8=py38h2bbff1b_0
+  - mkl_random=1.2.4=py38h59b6b97_0
+  - munkres=1.1.4=py_0
   - nbclient=0.8.0=py38haa95532_0
   - nbconvert=7.10.0=py38haa95532_0
   - nbformat=5.9.2=py38haa95532_0
   - nest-asyncio=1.6.0=py38haa95532_0
   - notebook=7.0.8=py38haa95532_0
   - notebook-shim=0.2.3=py38haa95532_0
+  - numpy=1.24.3=py38h79a8e48_1
+  - numpy-base=1.24.3=py38h8a87ada_1
+  - openjpeg=2.4.0=h4fc8c34_0
   - openssl=3.0.13=h2bbff1b_0
   - overrides=7.4.0=py38haa95532_0
-  - packaging=23.1=py38haa95532_0
+  - packaging=23.2=py38haa95532_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=10.2.0=py38h2bbff1b_0
   - pip=23.3.1=py38haa95532_0
   - pkgutil-resolve-name=1.3.10=py38haa95532_1
   - platformdirs=3.10.0=py38haa95532_0
   - ply=3.11=py38_0
+  - pooch=1.7.0=py38haa95532_0
   - prometheus_client=0.14.1=py38haa95532_0
   - prompt-toolkit=3.0.43=py38haa95532_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
@@ -88,10 +117,11 @@ dependencies:
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py38haa95532_1
+  - pyparsing=3.0.9=py38haa95532_0
   - pyqt=5.15.10=py38hd77b12b_0
   - pyqt5-sip=12.13.0=py38h2bbff1b_0
   - pysocks=1.7.1=py38haa95532_0
-  - python=3.8.18=h1aa4202_0
+  - python=3.8.19=h1aa4202_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py38haa95532_0
   - python-json-logger=2.0.7=py38haa95532_0
@@ -108,6 +138,7 @@ dependencies:
   - rfc3339-validator=0.1.4=py38haa95532_0
   - rfc3986-validator=0.1.1=py38haa95532_0
   - rpds-py=0.10.6=py38h062c2fa_0
+  - scipy=1.10.1=py38hdcfc7df_1
   - send2trash=1.8.2=py38haa95532_0
   - setuptools=68.2.2=py38haa95532_0
   - sip=6.7.12=py38hd77b12b_0
@@ -116,6 +147,7 @@ dependencies:
   - soupsieve=2.5=py38haa95532_0
   - sqlite=3.41.2=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - tbb=2021.8.0=h59b6b97_0
   - terminado=0.17.1=py38haa95532_0
   - tinycss2=1.2.1=py38haa95532_0
   - toml=0.10.2=pyhd3eb1b0_0
@@ -140,9 +172,4 @@ dependencies:
   - zipp=3.17.0=py38haa95532_0
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
-  - pip:
-      - black==24.2.0
-      - click==8.1.7
-      - mypy-extensions==1.0.0
-      - pathspec==0.12.1
 prefix: C:\Users\Gregg\anaconda3\envs\gregg-circ-homer-models
