--- a/environment_explicit.yml
+++ b/environment_explicit.yml
@@ -13,6 +13,7 @@ dependencies:
   - beautifulsoup4=4.12.2=py38haa95532_0
   - blas=1.0=mkl
   - bleach=4.1.0=pyhd3eb1b0_0
+  - bottleneck=1.3.7=py38h9128911_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotli-python=1.0.9=py38hd77b12b_7
@@ -95,12 +96,14 @@ dependencies:
   - nest-asyncio=1.6.0=py38haa95532_0
   - notebook=7.0.8=py38haa95532_0
   - notebook-shim=0.2.3=py38haa95532_0
+  - numexpr=2.8.4=py38h7b80656_1
   - numpy=1.24.3=py38h79a8e48_1
   - numpy-base=1.24.3=py38h8a87ada_1
   - openjpeg=2.4.0=h4fc8c34_0
   - openssl=3.0.13=h2bbff1b_0
   - overrides=7.4.0=py38haa95532_0
   - packaging=23.2=py38haa95532_0
+  - pandas=2.0.3=py38h4ed8f06_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pickleshare=0.7.5=pyhd3eb1b0_1003
@@ -125,6 +128,7 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py38haa95532_0
   - python-json-logger=2.0.7=py38haa95532_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py38haa95532_0
   - pywin32=305=py38h2bbff1b_0
   - pywinpty=2.0.10=py38h5da7b33_0
@@ -139,6 +143,7 @@ dependencies:
   - rfc3986-validator=0.1.1=py38haa95532_0
   - rpds-py=0.10.6=py38h062c2fa_0
   - scipy=1.10.1=py38hdcfc7df_1
+  - seaborn=0.12.2=py38haa95532_0
   - send2trash=1.8.2=py38haa95532_0
   - setuptools=68.2.2=py38haa95532_0
   - sip=6.7.12=py38hd77b12b_0
